--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,11 +1,15 @@
 <div class="row">
   <div class="col-xs-12">
-    <img src="" alt="" class="img-responsive">
+    <img
+      [src]="detail.imagePath"
+      alt="{{ detail.name }}"
+      class="img-responsive"
+      style="max-height: 300px">
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <h1>Recipe Name</h1>
+    <h1>{{ detail.name}}</h1>
   </div>
 </div>
 <div class="row">
@@ -24,7 +28,7 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    Description
+    <p>{{ detail.description }}</p>
   </div>
 </div>
 <div class="row">
